...
    return picker
  }()

  private lazy var flipButton: UIButton = {
    let _button = UIButton(type: .system)
    _button.frame = CGRect(x: 0, y: 0, width: UIScreen.main.bounds.width, height: 88)
    _button.setTitle("Storyboard", for: UIControl.State())
    _button.addTarget(self, action: .showStoryboard, for: .touchUpInside)
    return _button
  }()

  // MARK: - Initialization

...
    return 1
  }

  override func tableView(_ tableView: UITableView, titleForHeaderInSection section: Int) -> String? {
    switch showcases[section] {
    case is KeyboardDismissTextField.Type:
      return "Dismiss Keyboard"
    case is TokenField.Type:
      return "Text Field with Tokens"
    case is CustomizedTokenField.Type:
      return "Customize Token Field"
    case is OptionPickerControl<Language>.Type:
      return "Option Picker Control"
...
